--- a/flourish_reports/templates/flourish_reports/recruit/recruitment_reports.html
+++ b/flourish_reports/templates/flourish_reports/recruit/recruitment_reports.html
@@ -54,7 +54,7 @@
 			]);
 
 			var options = {
-			  title: 'Infant Previous Study Data',
+			  title: 'Caregiver Previous Study Data',
 			   pieHole: 0.4
 			};
 
@@ -312,8 +312,8 @@ function closeNav() {
 
 {% block main %}
 	<div id="main">
-	<h2 class="text-center">Infant Previous Study Data Reports <input type="button" value="Show/Hide" onClick="showHideDiv('infant_previous_study_data_reports')"/></h2>
-	<div class="container" id="infant_previous_study_data_reports">
+	<h2 class="text-center">Caregiver Previous Study Data Reports <input type="button" value="Show/Hide" onClick="showHideDiv('caregiver_previous_study_data_reports')"/></h2>
+	<div class="container" id="caregiver_previous_study_data_reports">
 		<div class="tab-content">
 			
 			<div class="tab-pane well active in active" id="home">
@@ -322,12 +322,6 @@ function closeNav() {
 						<div class="panel panel-info">
 						  <div class="panel-heading">
 							Total Summary Per Study Report
-							<span class="pull-right">
-								<button type="button" class="btn btn-sm btn-default btn-sm" data-toggle="modal" data-target="#myModal">View Downloads </button
-							<a href="#">
-								<button type="button" class="btn btn-primary btn-sm">download</button>
-							</a>
-						  </span>
 						  </div>
 						  <div class="panel-body">
 						  <div class="table-responsive">
@@ -378,10 +372,10 @@ function closeNav() {
 								Locator data report
 								
 								<span class="pull-right">
-								<button type="button" class="btn btn-sm btn-default btn-sm" data-toggle="modal" data-target="#myModal">View Downloads </button
-								<a href="#">
+								<a href="{% url 'flourish_reports:recruitment_report_url' %}?download=locator">
 									<button type="button" class="btn btn-primary btn-sm">download</button>
 								</a>
+								<button type="button" class="btn btn-sm btn-default btn-sm" data-toggle="modal" data-target="#locatorModal">View Downloads </button>
 							  </span>
 							</div>
 						  <div class="panel-body">
@@ -429,10 +423,11 @@ function closeNav() {
 						  <div class="panel-heading">
 								Recruitment Reports
 								<span class="pull-right">
-								<button type="button" class="btn btn-sm btn-default btn-sm" data-toggle="modal" data-target="#myModal">View Downloads </button
-								<a href="#">
+								<a href="{% url 'flourish_reports:recruitment_report_url' %}?download=worklist_data">
 									<button type="button" class="btn btn-primary btn-sm">download</button>
 								</a>
+								<button type="button" class="btn btn-sm btn-default btn-sm" data-toggle="modal" data-target="#worklistModal">View Downloads </button>
+								
 							  </span>
 							</div>
 						  <div class="panel-body">
@@ -472,10 +467,11 @@ function closeNav() {
 						  <div class="panel-heading">
 							Calling Attempts
 							<span class="pull-right">
-								<button type="button" class="btn btn-sm btn-default btn-sm" data-toggle="modal" data-target="#myModal">View Downloads </button
-								<a href="#">
+								<a href="{% url 'flourish_reports:recruitment_report_url' %}?download=call_attempts">
 									<button type="button" class="btn btn-primary btn-sm">download</button>
 								</a>
+								<button type="button" class="btn btn-sm btn-default btn-sm" data-toggle="modal" data-target="#attemptsModal">View Downloads </button>
+								
 							  </span>
 						  </div>
 						  <div class="panel-body">
@@ -513,10 +509,11 @@ function closeNav() {
 						  <div class="panel-heading">
 							Total number of participants to call 
 							<span class="pull-right">
-								<button type="button" class="btn btn-sm btn-default btn-sm" data-toggle="modal" data-target="#myModal">View Downloads </button
-								<a href="#">
+								<a href="{% url 'flourish_reports:recruitment_report_url' %}?download=continued_contact">
 									<button type="button" class="btn btn-primary btn-sm">download</button>
 								</a>
+								<button type="button" class="btn btn-sm btn-default btn-sm" data-toggle="modal" data-target="#cont_contactModal">View Downloads </button>
+								
 							  </span>
 
 						  </div>
@@ -548,10 +545,11 @@ function closeNav() {
 						  <div class="panel-heading">
 							Participants not able to reach
 							<span class="pull-right">
-								<button type="button" class="btn btn-sm btn-default btn-sm" data-toggle="modal" data-target="#myModal">View Downloads </button
-								<a href="#">
+								<a href="{% url 'flourish_reports:recruitment_report_url' %}?download=not_reacheble">
 									<button type="button" class="btn btn-primary btn-sm">download</button>
 								</a>
+								<button type="button" class="btn btn-sm btn-default btn-sm" data-toggle="modal" data-target="#unreachebleModal">View Downloads </button>
+								
 							  </span>
 
 						  </div>
@@ -586,10 +584,11 @@ function closeNav() {
 						  <div class="panel-heading">
 							Total Declined
 							<span class="pull-right">
-								<button type="button" class="btn btn-sm btn-default btn-sm" data-toggle="modal" data-target="#myModal">View Downloads </button
-								<a href="#">
+								<a href="{% url 'flourish_reports:recruitment_report_url' %}?download=declined">
 									<button type="button" class="btn btn-primary btn-sm">download</button>
 								</a>
+								<button type="button" class="btn btn-sm btn-default btn-sm" data-toggle="modal" data-target="#declinedModal">View Downloads </button>
+								
 							  </span>
 
 						  </div>
@@ -621,10 +620,11 @@ function closeNav() {
 						  <div class="panel-heading">
 							Total Consented
 							<span class="pull-right">
-								<button type="button" class="btn btn-sm btn-default btn-sm" data-toggle="modal" data-target="#myModal">View Downloads </button
-								<a href="#">
+								<a href="{% url 'flourish_reports:recruitment_report_url' %}?download=consented">
 									<button type="button" class="btn btn-primary btn-sm">download</button>
 								</a>
+								<button type="button" class="btn btn-sm btn-default btn-sm" data-toggle="modal" data-target="#consentedModal">View Downloads </button>
+								
 							  </span>
 
 						  </div>
@@ -659,7 +659,13 @@ function closeNav() {
 				</div>
 		</div>
 	</div>
-{% include "flourish_reports/recruit/dataset_downloads.html" %}
+{% include "flourish_reports/recruit/consented_downloads.html" %}
+{% include "flourish_reports/recruit/attempts_downloads.html" %}
+{% include "flourish_reports/recruit/cont_contact_downloads.html" %}
+{% include "flourish_reports/recruit/declined_downloads.html" %}
+{% include "flourish_reports/recruit/locator_downloads.html" %}
+{% include "flourish_reports/recruit/unreacheble_downloads.html" %}
+{% include "flourish_reports/recruit/worklist_downloads.html" %}
 </div>
 
 {% endblock main %}
