--- a/flourish_reports/templates/flourish_reports/recruit/recruitment_reports.html
+++ b/flourish_reports/templates/flourish_reports/recruit/recruitment_reports.html
@@ -312,6 +312,15 @@ function closeNav() {
 
 {% block main %}
 	<div id="main">
+	
+	<h2 class="text-center">Summary Previous Study Data Reports <input type="button" value="Show/Hide" onClick="showHideDiv('summary_previous_study_data_reports')"/></h2>
+	<div class="container" id="summary_previous_study_data_reports">
+		<div class="tab-content">
+			{{ summary_report | safe }}
+		</div>
+		<hr>
+	</div>
+	
 	<h2 class="text-center">Caregiver Previous Study Data Reports <input type="button" value="Show/Hide" onClick="showHideDiv('caregiver_previous_study_data_reports')"/></h2>
 	<div class="container" id="caregiver_previous_study_data_reports">
 		<div class="tab-content">
