add summary prev study data reports

--- a/flourish_reports/templates/flourish_reports/recruit/recruitment_reports.html
+++ b/flourish_reports/templates/flourish_reports/recruit/recruitment_reports.html
@@ -316,7 +316,7 @@ function closeNav() {
 	<h2 class="text-center">Summary Previous Study Data Reports <input type="button" value="Show/Hide" onClick="showHideDiv('summary_previous_study_data_reports')"/></h2>
 	<div class="container" id="summary_previous_study_data_reports">
 		<div class="tab-content">
-			
+			 {{ summary_report | safe }}
 		</div>
 		<hr>
 	</div>
