:sparkles: feat(Enrollment reports): Adds more panels for cohort breakdown

--- a/flourish_reports/templates/flourish_reports/enrolment/cohort_a.html
+++ b/flourish_reports/templates/flourish_reports/enrolment/cohort_a.html
@@ -1,21 +1,21 @@
 <div class="panel panel-info">
     <div class="panel-heading">Cohort A</div>
     <div class="panel-body">
-		<table class="table">
-		  <thead>
-		    <tr>
-		      <th scope="col">Preg Woman. Target: 200</th>
-		      <th scope="col">HEU. Target: 200</th>
-		      <th scope="col">HUU. Target: 75</th>
-		    </tr>
-		  </thead>
-		  <tbody>
-		    <tr>
-		    {% for key, value in cohort_a.items %}
-		      <td>{{ value }}</td>
-		    {% endfor %}
-		    </tr>
-		  </tbody>
-		</table>
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">Preg Woman. Target: 200</th>
+                <th scope="col">HEU. Target: 200</th>
+                <th scope="col">HUU. Target: 75</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                {% for key, value in current_cohort_a.items %}
+                    <td>{{ value | length }}</td>
+                {% endfor %}
+            </tr>
+            </tbody>
+        </table>
     </div>
 </div>
