--- a/flourish_reports/templates/flourish_reports/recruit/recruitment_reports.html
+++ b/flourish_reports/templates/flourish_reports/recruit/recruitment_reports.html
@@ -622,31 +622,30 @@ function closeNav() {
 
 			<div class="tab-pane well active in active" id="home">
 				<div class="row">
-					<div class="col-md-6">
+					<div class="col-md-12">
 						<div class="panel panel-info">
 						  <div class="panel-heading">
 								AGE UP WEEKLY REPORT
 							</div>
 						  <div class="panel-body">
 						  <div class="table-responsive">
-						  <table class="fixed table table-hover table-sm table-condensed ">
+						  <table class="table table-striped">
 							  <thead>
 								<tr>
-									<th>DATE</th>
+									<th>WEEK DATES</th>
 									<th>SUBJECT IDENTIFIERS</th>
+									<th>AGE THIS WEEK<th>
+									<th>DOB</th>
 								</tr>
 							  </thead>
 							  <tbody>
 								{% for stats in ageing_out_statistics %}
 									<tr>
 										<td>{{ stats.0 }}</td>
-										<td>
-											<ul>
-												{% for subject_identifer in stats.1 %}
-													<li>{{ subject_identifer }}</li>
-												{% endfor %}
-											</ul>
-										</td>
+										<td>{{ stats.1.0 }} </td>
+										<td>{{ stats.1.1 }} </td>
+										<td>{{ stats.1.2}}</td>
+									
 									</tr>
 								{% endfor %}
 							  </tbody>
