--- a/flourish_reports/templates/flourish_reports/enrolment/cohort_c.html
+++ b/flourish_reports/templates/flourish_reports/enrolment/cohort_c.html
@@ -1,20 +1,20 @@
+{% load flourish_reports_dashboard_extras %}
 <div class="panel panel-info">
     <div class="panel-heading">Cohort C</div>
     <div class="panel-body">
-		<table class="table">
-		  <thead>
-		    <tr>
-		      <th scope="col">HUU. Target: 200</th>
-		      <th scope="col">PI. Target: 100</th>
-		    </tr>
-		  </thead>
-		  <tbody>
-		    <tr>
-		      {% for key, value in cohort_c.items %}
-			    <td>{{ value }}</td>
-			  {% endfor %}
-		    </tr>
-		  </tbody>
-		</table>
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">HUU. Target: 200</th>
+                <th scope="col">PI. Target: 100</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>{{ data|get_item:'Unexposed' }}</td>
+                <td>{{ data|get_item:'3drug' }}</td>
+            </tr>
+            </tbody>
+        </table>
     </div>
 </div>
