--- a/flourish_reports/templates/flourish_reports/enrolment/enrolment.html
+++ b/flourish_reports/templates/flourish_reports/enrolment/enrolment.html
@@ -5,11 +5,11 @@
 </div>
 <br/>
 <div class="panel panel-info">
-    {% cohort_breakdown generate_enrolment_cohort_breakdown 'Enrolment' %}
+    {% cohort_breakdown enrolment_exposure_summary 'Enrolment' %}
 </div>
 <br/>
 <div class="panel panel-info">
-    {% cohort_breakdown generate_current_cohort_breakdown 'Current' %}
+    {% cohort_breakdown current_exposure_summary 'Current' %}
 </div>
 <div class="row">
     <aside class="col-sm-6">
@@ -17,10 +17,10 @@
     </aside>
     <!-- col.// -->
     <aside class="col-sm-6">
-        {% cohort_b_panel current_cohort_b %}
+        {% cohort_b_panel cohort_b %}
     </aside>
     <!-- col.// -->
     <aside class="col-sm-6">
-        {% cohort_c_panel current_cohort_c %}
+        {% cohort_c_panel cohort_c %}
     </aside>
 </div>
