:recycle: refactor(enrolment reports): Update enrolment report code
Refactor the enrolment reports generation code to improve performance and readability. Changes include replacing pandas DataFrame operations with dictionary-based solutions, simplifying Flask template logic, and restructuring nested functions into a more readable format. Also, add some utility functions for more specific operations like converting string formats and included a method to convert defaultdict instances into regular dictionaries. Overall these changes are expected to improve the code's performance and maintainability.

--- a/flourish_reports/templates/flourish_reports/enrolment/enrolment.html
+++ b/flourish_reports/templates/flourish_reports/enrolment/enrolment.html
@@ -5,11 +5,11 @@
 </div>
 <br/>
 <div class="panel panel-info">
-    {% cohort_breakdown enrolment_exposure_summary 'Enrolment' %}
+    {% cohort_breakdown enrollment_report 'Enrolment' %}
 </div>
 <br/>
 <div class="panel panel-info">
-    {% cohort_breakdown current_exposure_summary 'Current' %}
+    {% cohort_breakdown current_report 'Current' %}
 </div>
 <div class="row">
     <aside class="col-sm-6">
@@ -17,10 +17,10 @@
     </aside>
     <!-- col.// -->
     <aside class="col-sm-6">
-        {% cohort_b_panel cohort_b %}
+        {% cohort_b_panel current_cohort_b %}
     </aside>
     <!-- col.// -->
     <aside class="col-sm-6">
-        {% cohort_c_panel cohort_c %}
+        {% cohort_c_panel current_cohort_c %}
     </aside>
 </div>
