--- a/flourish_reports/templates/flourish_reports/enrolment/cohort_breakdown.html
+++ b/flourish_reports/templates/flourish_reports/enrolment/cohort_breakdown.html
@@ -1,24 +1,21 @@
 {% load flourish_reports_dashboard_extras %}
+
 <div class="panel-heading">{{ title }}</div>
 <div class="panel-body">
     <table class="table">
         <thead>
         <tr>
             <th scope="col">Cohort</th>
-            <th scope="col">ANC</th>
             <th scope="col">HEU</th>
             <th scope="col">HUU</th>
-            <th scope="col">HEU + ART-3 Drug</th>
         </tr>
         </thead>
         <tbody>
-        {% for cohort, total in data.items %}
+        {% for values in data %}
             <tr>
-                <td>{{ cohort }}</td>
-                <td>{{ data|get_item:cohort|get_item:"ANC" }}</td>
-                <td>{{ data|get_item:cohort|get_item:"Exposed" }}</td>
-                <td>{{ data|get_item:cohort|get_item:"Unexposed" }}</td>
-                <td>{{ data|get_item:cohort|get_item:"3drug" }}</td>
+                <td>{{ values|get_item:'cohort_name' }}</td>
+                <td>{{ values|get_item:'unexposed' }}</td>
+                <td>{{ values|get_item:'exposed' }}</td>
             </tr>
         {% endfor %}
         </tbody>
