:recycle: refactor(enrolment reports): Redesigned the enrolment report's layout and simplified templates
Reworked the layout for improved user experience and clearer data presentation. Unnecessary templates (cohort_b, cohort_c), were deleted and existing templates (cohort_a) were modified to be more versatile (renamed as targets_reports). This was for better reusability and cleaner code management. Other minor changes involve reordering of table columns and modification of panel headers to improve data readability.

--- a/flourish_reports/templates/flourish_reports/enrolment/enrolment.html
+++ b/flourish_reports/templates/flourish_reports/enrolment/enrolment.html
@@ -13,14 +13,12 @@
 </div>
 <div class="row">
     <aside class="col-sm-6">
-        {% include "flourish_reports/enrolment/cohort_a.html" %}
+        {% targets_reports current_report.0 450 325 %}
     </aside>
-    <!-- col.// -->
     <aside class="col-sm-6">
-        {% cohort_b_panel current_cohort_b %}
+        {% targets_reports current_report.1 200 100 %}
     </aside>
-    <!-- col.// -->
     <aside class="col-sm-6">
-        {% cohort_c_panel current_cohort_c %}
+        {% targets_reports current_report.2 100 200 %}
     </aside>
 </div>
