update report order

--- a/flourish_reports/templates/flourish_reports/enrolment/targets_reports.html
+++ b/flourish_reports/templates/flourish_reports/enrolment/targets_reports.html
@@ -1,6 +1,6 @@
 {% load flourish_reports_dashboard_extras %}
 <div class="panel panel-info">
-    <div class="panel-heading">{{ title }}</div>
+    <div class="panel-heading">Current {{ title }}</div>
     <div class="panel-body">
         <table class="table">
             <thead>
