fix/added missing crfs

--- a/flourish_reports/templates/flourish_reports/missing_crfs/missing_crf_listview.html
+++ b/flourish_reports/templates/flourish_reports/missing_crfs/missing_crf_listview.html
@@ -1,8 +1,4 @@
 {% extends "edc_dashboard/listboard.html" %}
-
-
-h1
-
 {% block listboard_table_header %}
 
 <th>#</th>
@@ -11,12 +7,9 @@ h1
 <th>Appt Date</th>
 <th>Visit Code</th>
 <th>Missing CRFs</th>
-<th>Dashboard</th>
-
-
+<th>CRFs</th>
 
 {% endblock listboard_table_header %}
-
 
 {% block listboard_table_button_column %}
 {% endblock %}
@@ -25,15 +18,13 @@ h1
 
 <td>{{ result.subject_identifier }}</td>
 <td>{{ result.appt_status | title }}</td>
-{# <td>{{ result.appt_datetime }}</td>#}
 <td>{{ result.visit_code }}</td>
 <td>{% firstof result.visit_code_sequence '0' %}</td>
-<td>{{ result.missing_crf }}</td>
-<td><a href="/subject/subject_dashboard/{{result.subject_identifier}}" class="btn btn-primary">Dashboard</a></td>
-
+<td>{{ result.missing_crf_count }}</td>
+<td>{{ result.missing_crf_names }}</td>
 
 {% endblock listboard_table_columns %}
 
 {% block extra_content%}
-<a href="?download=True" style="margin-bottom: 1.5em;" class="btn btn-primary">Download Export</a>
+<a href="?download=True" style="margin-bottom: 1.5em" class="btn btn-primary">Download Export</a>
 {% endblock extra_content %}
